8组传感器测试 #8组传感器测试

--- a/DataCollection/DataCollection/App.config
+++ b/DataCollection/DataCollection/App.config
@@ -3,4 +3,42 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+    <appSettings>
+      <!--压力温度传感器串口设置*************************************************************--><!--
+      --><!--发送数据至串口名称--><!--
+      <add key="SendDataSerialPortName" value="COM6"/>
+      --><!--发送数据至串口波特率--><!--
+      <add key="SendDataSerialBaudRate" value="9600"/>
+      --><!--发送数据至串口数据位--><!--
+      <add key="SendDataSerialDataBits" value="8"/>
+      --><!--发送数据至串口无奇偶性验证--><!--
+      <add key="SendDataSerialParity" value="None"/>
+      --><!--发送数据至串口停止位--><!--
+      <add key="SendDataSerialStopBits" value="One"/>
+
+      --><!--三相电压电流串口设置*************************************************************--><!--
+      --><!--发送数据至串口名称--><!--
+      <add key="SendDataSerialPortName" value="COM5"/>
+      --><!--发送数据至串口波特率--><!--
+      <add key="SendDataSerialBaudRate" value="2400"/>
+      --><!--发送数据至串口数据位--><!--
+      <add key="SendDataSerialDataBits" value="8"/>
+      --><!--发送数据至串口无奇偶性验证--><!--
+      <add key="SendDataSerialParity" value="None"/>
+      --><!--发送数据至串口停止位--><!--
+      <add key="SendDataSerialStopBits" value="One"/>-->
+
+
+      <!--RFID串口设置*************************************************************-->
+      <!--RFID串口名称-->
+      <add key="RFIDSerialPortName" value="COM6"/>
+      <!--RFID串口波特率-->
+      <add key="RFIDSerialBaudRate" value="9600"/>
+      <!--RFID串口数据位-->
+      <add key="RFIDSerialDataBits" value="8"/>
+      <!--RFID串口无奇偶性验证-->
+      <add key="RFIDSerialParity" value="None"/>
+      <!--RFID串口停止位-->
+      <add key="RFIDSerialStopBits" value="One"/>
+    </appSettings>
 </configuration>
