添加MQTT通讯方式 #添加MQTT通讯方式

--- a/DataCollection/DataCollection/App.config
+++ b/DataCollection/DataCollection/App.config
@@ -1,44 +1,79 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
-    <appSettings>
-      <!--压力温度传感器串口设置*************************************************************--><!--
-      --><!--发送数据至串口名称--><!--
-      <add key="SendDataSerialPortName" value="COM6"/>
-      --><!--发送数据至串口波特率--><!--
-      <add key="SendDataSerialBaudRate" value="9600"/>
-      --><!--发送数据至串口数据位--><!--
-      <add key="SendDataSerialDataBits" value="8"/>
-      --><!--发送数据至串口无奇偶性验证--><!--
-      <add key="SendDataSerialParity" value="None"/>
-      --><!--发送数据至串口停止位--><!--
-      <add key="SendDataSerialStopBits" value="One"/>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
 
-      --><!--三相电压电流串口设置*************************************************************--><!--
-      --><!--发送数据至串口名称--><!--
-      <add key="SendDataSerialPortName" value="COM5"/>
-      --><!--发送数据至串口波特率--><!--
-      <add key="SendDataSerialBaudRate" value="2400"/>
-      --><!--发送数据至串口数据位--><!--
-      <add key="SendDataSerialDataBits" value="8"/>
-      --><!--发送数据至串口无奇偶性验证--><!--
-      <add key="SendDataSerialParity" value="None"/>
-      --><!--发送数据至串口停止位--><!--
-      <add key="SendDataSerialStopBits" value="One"/>-->
+  <log4net>
+    <!-- OFF, FATAL, ERROR, WARN, INFO, DEBUG, ALL -->
+    <!-- Set root logger level to ERROR and its appenders -->
+    <root>
+      <level value="ALL" />
+      <appender-ref ref="SysAppender" />
+    </root>
+    <!-- Print only messages of level DEBUG or above in the packages -->
+    <logger name="WebLogger">
+      <level value="DEBUG" />
+    </logger>
+    <appender name="SysAppender" type="log4net.Appender.RollingFileAppender,log4net">
+      <param name="File" value="log/" />
+      <param name="AppendToFile" value="true" />
+      <param name="RollingStyle" value="Date" />
+      <param name="DatePattern" value="&quot;Logs_&quot;yyyyMMdd&quot;.txt&quot;" />
+      <param name="StaticLogFileName" value="false" />
+      <layout type="log4net.Layout.PatternLayout,log4net">
+        <param name="ConversionPattern" value="%d [%t] %-5p %c - %m%n" />
+      </layout>
+    </appender>
+    <appender name="consoleApp" type="log4net.Appender.ConsoleAppender,log4net">
+      <layout type="log4net.Layout.PatternLayout,log4net">
+        <param name="ConversionPattern" value="%d [%t] %-5p %c - %m%n" />
+      </layout>
+    </appender>
+  </log4net>
+  <appSettings>
+    <!--温度压力串口设置*************************************************************-->
+    <!--温度压力串口名称-->
+    <add key="TemperaturePressureSerialPortName" value="COM4" />
+    <!--温度压力串口波特率-->
+    <add key="TemperaturePressureSerialBaudRate" value="9600" />
+    <!--温度压力串口数据位-->
+    <add key="TemperaturePressureSerialDataBits" value="8" />
+    <!--温度压力串口偶性验证-->
+    <add key="TemperaturePressureSerialParity" value="None" />
+    <!--温度压力串口停止位-->
+    <add key="TemperaturePressureSerialStopBits" value="One" />
 
 
-      <!--RFID串口设置*************************************************************-->
-      <!--RFID串口名称-->
-      <add key="RFIDSerialPortName" value="COM6"/>
-      <!--RFID串口波特率-->
-      <add key="RFIDSerialBaudRate" value="9600"/>
-      <!--RFID串口数据位-->
-      <add key="RFIDSerialDataBits" value="8"/>
-      <!--RFID串口无奇偶性验证-->
-      <add key="RFIDSerialParity" value="None"/>
-      <!--RFID串口停止位-->
-      <add key="RFIDSerialStopBits" value="One"/>
-    </appSettings>
+    <!--电压串口设置*************************************************************-->
+    <!--电压串口名称-->
+    <add key="VoltageSerialPortName" value="COM5" />
+    <!--电压串口波特率-->
+    <add key="VoltageSerialBaudRate" value="2400" />
+    <!--电压串口数据位-->
+    <add key="VoltageSerialDataBits" value="8" />
+    <!--电压串口偶性验证-->
+    <add key="VoltageSerialParity" value="Even" />
+    <!--电压串口停止位-->
+    <add key="VoltageSerialStopBits" value="One" />
+  </appSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.AspNetCore.Connections.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.1.3.0" newVersion="2.1.3.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
