--- a/DataCollection/DataCollection/packages.config
+++ b/DataCollection/DataCollection/packages.config
@@ -1,5 +1,49 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="HslCommunication" version="8.0.2" targetFramework="net461" />
+  <package id="log4net" version="2.0.8" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Authentication.Abstractions" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Authorization" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Authorization.Policy" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Connections.Abstractions" version="2.1.3" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Hosting.Abstractions" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Hosting.Server.Abstractions" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Http" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Http.Abstractions" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Http.Connections" version="1.0.3" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Http.Connections.Common" version="1.0.3" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Http.Extensions" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Http.Features" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Routing" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Routing.Abstractions" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.WebSockets" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.WebUtilities" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Hosting.Abstractions" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.ObjectPool" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Options" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Primitives" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.Net.Http.Headers" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net461" />
+  <package id="MQTTnet" version="2.4.0" targetFramework="net461" />
+  <package id="NETStandard.Library" version="2.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net461" />
+  <package id="System.Buffers" version="4.5.0" targetFramework="net461" />
+  <package id="System.IO.Pipelines" version="4.5.0" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.1" targetFramework="net461" />
+  <package id="System.Net.Security" version="4.3.2" targetFramework="net461" />
+  <package id="System.Net.WebSockets" version="4.3.0" targetFramework="net461" />
+  <package id="System.Net.WebSockets.Client" version="4.3.2" targetFramework="net461" />
+  <package id="System.Net.WebSockets.WebSocketProtocol" version="4.5.1" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.1" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" />
+  <package id="System.Text.Encodings.Web" version="4.5.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net461" />
 </packages>
