温度5秒钟轮询一次
*温度5秒钟轮询一次

--- a/DataCollection/DataCollection/App.config
+++ b/DataCollection/DataCollection/App.config
@@ -37,7 +37,7 @@
   <appSettings>
     <!--温度压力串口设置*************************************************************-->
     <!--温度压力串口名称-->
-    <add key="TemperaturePressureSerialPortName" value="COM6" />
+    <add key="TemperaturePressureSerialPortName" value="COM9" />
     <!--温度压力串口波特率-->
     <add key="TemperaturePressureSerialBaudRate" value="9600" />
     <!--温度压力串口数据位-->
@@ -46,6 +46,9 @@
     <add key="TemperaturePressureSerialParity" value="None" />
     <!--温度压力串口停止位-->
     <add key="TemperaturePressureSerialStopBits" value="One" />
+
+    <!--间隔时间（参数是毫秒）-->
+    <add key="UploadDataIntervalMilliseconds" value="1000" />
 
 
     <!--电压串口设置*************************************************************-->
